--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,42 @@
+# Dependencies
 node_modules
+package-lock.json
+
+# Build outputs
+dist
+*.local
+
+# IDE - IntelliJ IDEA / WebStorm
+.idea
+*.iml
+*.iws
+*.ipr
+
+# IDE - VSCode
+.vscode/*
+!.vscode/extensions.json
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Testing
+coverage
+.nyc_output
+
+# Temporary files
+*.tmp
+*.temp
+.cache
